# daiv-sandbox

./: .coveragerc  .daiv.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
benchmarks/: README.md  __init__.py  __main__.py  client.py  corpus.py  report.py  repos.py  runner.py  stats.py
daiv_sandbox/: __init__.py  config.py  languages.py  locks.py  logs.py  main.py  reaper.py  schemas.py  scripts.py  sessions.py
daiv_sandbox/egress/: addon.py  constants.py  manager.py  policy.py
docs/superpowers/plans/: 2026-06-01-fs-deepagents-parity.md
docs/superpowers/specs/: 2026-06-01-fs-deepagents-parity-design.md
egress_proxy/: Dockerfile
scripts/: dump_schemas.py
tests/: test_languages.py  test_main.py  test_schemas.py  test_sessions.py
tests/integration_tests/: conftest.py  test_diff.py  test_eager_sync.py  test_egress_proxy.py  test_extract_patch.py  test_git_commands.py  test_home_env.py  test_network.py  test_patch_extractor.py  test_pipefail.py  test_scratch_fs.py  test_workspace_fs.py  utils.py
tests/unit_tests/: test_benchmarks_cli.py  test_benchmarks_client.py  test_benchmarks_corpus.py  test_benchmarks_report.py  test_benchmarks_runner.py  test_benchmarks_stats.py  test_config.py  test_egress_addon.py  test_egress_manager.py  test_egress_policy.py  test_egress_schemas.py  test_locks.py  test_main.py  test_reaper.py  test_schemas.py  test_scripts.py  test_sessions.py
