[project]
name = "daiv-sandbox"
version = "0.1.1"
description = "Runtime sandbox to empower DAIV agents to run arbitrary code/commands."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sandro Rodrigues", email = "srtabs@gmail.com" },
]
authors = [
  { name = "Sandro Rodrigues", email = "srtabs@gmail.com" },
]
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "docker==7.1",
  "fastapi[standard]==0.115.12",
  "ipython==9.2",
  "pydantic==2.11.5",
  "pydantic-settings==2.9.1",
  "sentry-sdk==2.30.0",
]

urls.changelog = "https://github.com/srtab/daiv-sandbox/blob/main/CHANGELOG.md"
urls.issues = "https://github.com/srtab/daiv-sandbox/issues"
urls.source = "https://github.com/srtab/daiv-sandbox"

[dependency-groups]
dev = [
  "mypy==1.15",
  "pre-commit==4.2",
  "pyopenssl==25",
  "pyproject-fmt==2.5.1",
  "pytest-cov==6.1.1",
  "pytest-env==1.1.5",
  "pytest-mock==3.14",
  "pytest-xdist==3.6.1",
  "ruff==0.11.7",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [ "*/node_modules/*", "*/static/*" ]

force-exclude = true
preview = true
show-fixes = true
format.skip-magic-trailing-comma = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # flake8-logging-format
  "G",
  # isort
  "I",
  # flake8-logging
  "LOG",
  # pep8-naming
  "N",
  # flake8-use-pathlib
  "PTH",
  # flake8-bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-print
  "T20",
  # flake8-type-checking
  "TCH",
  # pyupgrade
  "UP",
  # pycodestyle
  "W",
]
lint.ignore = [ "N812", "S101" ]
lint.isort.known-first-party = [  ]
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
lint.isort.split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "--cov --cov-config=.coveragerc"

[tool.pytest_env]
DAIV_SANDBOX_API_KEY = "notsosecret"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "docker.*",
]
ignore_missing_imports = true
