[project]
name = "daiv-sandbox"
version = "0.3.1"
description = "Runtime sandbox to empower DAIV agents to run arbitrary commands."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sandro Rodrigues", email = "srtabs@gmail.com" },
]
authors = [
  { name = "Sandro Rodrigues", email = "srtabs@gmail.com" },
]
requires-python = ">=3.14,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "docker==7.1.0",
  "fastapi[standard]==0.129.0",
  "ipython==9.10.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.0",
  "sentry-sdk==2.53.0",
]
urls.changelog = "https://github.com/srtab/daiv-sandbox/blob/main/CHANGELOG.md"
urls.issues = "https://github.com/srtab/daiv-sandbox/issues"
urls.source = "https://github.com/srtab/daiv-sandbox"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "prek>=0.2.28",
  "pyopenssl==25.3.0",
  "pyproject-fmt==2.16.0",
  "pytest-cov==7.0.0",
  "pytest-env==1.3.2",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "ruff==0.15.2",
]

[tool.ruff]
line-length = 120
extend-exclude = [ "*/node_modules/*", "*/static/*" ]
force-exclude = true
preview = true
show-fixes = true
format.skip-magic-trailing-comma = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # flake8-logging-format
  "G",
  # isort
  "I",
  # flake8-logging
  "LOG",
  # pep8-naming
  "N",
  # flake8-use-pathlib
  "PTH",
  # flake8-bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-print
  "T20",
  # flake8-type-checking
  "TCH",
  # pyupgrade
  "UP",
  # pycodestyle
  "W",
]
lint.ignore = [ "N812", "S101" ]
lint.isort.known-first-party = [
  "daiv_sandbox",
]
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
lint.isort.split-on-trailing-comma = false

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest]
ini_options.addopts = "--cov --cov-config=.coveragerc"

[tool.pytest_env]
DAIV_SANDBOX_API_KEY = "notsosecret"

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "docker.*",
  "fastapi.*",
  "pydantic.*",
  "pydantic_settings.*",
  "sentry_sdk.*",
]
ignore_missing_imports = true
